updated scripts for each operating system